blogs-section alignment fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,92 +1,103 @@
 /* common styles */
 /* font import url  */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Open Sans', sans-serif;
-font-family: 'Poppins', sans-serif;
-display: flex;
+
+* {
+   margin: 0;
+   padding: 0;
+   font-family: 'Open Sans', sans-serif;
+   font-family: 'Poppins', sans-serif;
+   /* display: flex;
 flex-direction: column;
 justify-content: center;
-align-items: center;
+align-items: center; */
 }
+
 /*------------
  top banner starts
  -------------*/
- .top-banner{
-    background-color: black;
-    height: 87vh;
-    margin: 40px 120px;
-    /* padding: 20px; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 25px;
-    overflow: hidden;
+.top-banner {
+   background-color: black;
+   height: 87vh;
+   margin: 40px 120px;
+   /* padding: 20px; */
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   border-radius: 25px;
+   overflow: hidden;
 
- }
- .top-banner-left{
-    /* background-color: red; */
-    width: 50%;
-    /* height: 100%; */
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 50px 80px;
-
- }
- .top-banner-text{
-    color: white;
-    font-size: 14px;
-    margin-bottom: 20px;
-     }
- .top-banner-text > h1{
-    font-size: 57px;
-    line-height: 60px;
-    margin-bottom: 20px;
- }
- .top-banner-link{
-    background-color: crimson;
-    width: 140px;
-    padding: 10px;
-    border-radius: 7px;
- }
- .top-banner-link a,i{
-    text-decoration: none;
-    color: white;
-    font-size: 16px;
-    padding: 0px 10px;
 }
 
- .top-banner-right{
-    /* background-color: blueviolet; */
-    width: 80%;
-    /* height: 100vh; */
-    overflow: hidden;
- }
- .top-banner-right img{
-    width: 85vh;
- }
+.top-banner-left {
+   /* background-color: red; */
+   width: 50%;
+   /* height: 100%; */
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   padding: 50px 80px;
+
+}
+
+.top-banner-text {
+   color: white;
+   font-size: 14px;
+   margin-bottom: 20px;
+}
+
+.top-banner-text>h1 {
+   font-size: 57px;
+   line-height: 60px;
+   margin-bottom: 20px;
+}
+
+.top-banner-link {
+   background-color: crimson;
+   width: 140px;
+   padding: 10px;
+   border-radius: 7px;
+}
+
+.top-banner-link a,
+i {
+   text-decoration: none;
+   color: white;
+   font-size: 16px;
+   padding: 0px 10px;
+}
+
+.top-banner-right {
+   /* background-color: blueviolet; */
+   width: 80%;
+   /* height: 100vh; */
+   overflow: hidden;
+}
+
+.top-banner-right img {
+   width: 85vh;
+}
+
 /*------------
  top banner ends
  -------------*/
 
- /*--------------------
+/*--------------------
  blog-section starts
  ---------------------*/
- /* blogs-links */
- .links{
-    width: 260px;
-    height: 295px;
-    background-color: black;
+/* blogs-links */
+.links {
+   width: 260px;
+   height: 295px;
+   background-color: black;
    border-radius: 7px;
-    display: flex;
-    flex-direction: column;
+   display: flex;
+   flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
- }
- .link{
+}
+
+.link {
    background-color: white;
    width: 190px;
    padding: 10px;
@@ -94,46 +105,54 @@ align-items: center;
    /* height: 30px; */
    text-align: center;
 }
- .link a{
-    text-decoration: none;
-    color: black;
-    font-size: 20px;
-    /* background-color: aqua; */
- }
- /* blogs */
- .blogs-section{
+
+.link a {
+   text-decoration: none;
+   color: black;
+   font-size: 20px;
+   /* background-color: aqua; */
+}
+
+/* blogs */
+.blogs-section {
    display: flex;
    justify-content: space-around;
    column-gap: 20px;
-   width: 1000px;
- }
- .blogs{
+   /* width: 1000px; */
+   /* background-color: aqua; */
+   padding: 20px 180px;
+}
+
+.blogs {
    display: grid;
-   grid-template-columns: repeat(3,1fr);
+   grid-template-columns: repeat(3, 1fr);
    column-gap: 20px;
    row-gap: 20px;
- }
- .blog{
+}
+
+.blog {
    border: 1px solid rgb(211, 211, 211);
-   width: 300px;
+   width: 260px;
    height: 315px;
    overflow: hidden;
    border-radius: 15px;
- }
- .blog-text-area{
+}
+
+.blog-text-area {
    /* background-color: aqua; */
    line-height: 30px;
    padding: 15px;
- }
- .blog-link a{
+}
+
+.blog-link a {
    text-decoration: none;
    color: black;
    border: 1px solid black;
    padding: 3px 11px;
    border-radius: 5px;
- }
- .blog-title h4{
+}
+
+.blog-title h4 {
    /* background-color: rebeccapurple; */
    line-height: 20px;
-   }
-
+}
